resolve jdk.internal.vm.ci if +EnableJVMCI and -UseJVMCINativeLibrary